--- a/hud.html
+++ b/hud.html
@@ -16,6 +16,7 @@
 
     <div class='topbar'>
       <a class='' href="./index.html"> Home</a>
+      <a href="./rocket.html"> Rocket Details</a>
       <a href="./hud.html"> HUD</a>
       <a href="./telemetry.html"> Telemetry</a>
     </div>
