--- a/rocket.html
+++ b/rocket.html
@@ -7,8 +7,10 @@
 
     <link rel="stylesheet" type="text/css" href="./styles/base.css">
 
-  
+
+
   </head>
+
 
   <body>
 
@@ -20,18 +22,13 @@
     </div>
 
 
+    <h1>Rocket Details </h1>
+
+
+    <input type='button' value = 'load openRocket File'>
+
 
 
 
   </body>
-
-
-		
-
-
-
-
-
-
-
 </html>
