--- a/telemetry.html
+++ b/telemetry.html
@@ -15,6 +15,7 @@
   <body>
     <div class='topbar'>
       <a class='' href="./index.html"> Home</a>
+      <a href="./rocket.html"> Rocket Details</a>
       <a href="./hud.html"> HUD</a>
       <a href="./telemetry.html"> Telemetry</a>
     </div>
